# template

./: .bazelignore  .bazelrc  .gitignore  BUILD  Cargo.toml  MODULE.bazel  README.md  WORKSPACE  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: linux.yml  mac.yml  windows.yml  windows.yml.disable
examples/c/: BUILD  lib.c  main.c
examples/cc/: BUILD  lib.c  lib.h  main.c  main.cc
examples/js/next/: BUILD.bazel  README.md  defs.bzl  jest.config.js  package.json
examples/js/next/pages/: BUILD.bazel  index.tsx
examples/js/next/pages/api/: BUILD.bazel
examples/js/next/public/: BUILD.bazel
examples/js/next/styles/: BUILD.bazel
examples/js/webpack/: BUILD.bazel  README.md  build_smoke_test.js  package.json
examples/js/webpack/src/: BUILD
examples/jupyter/: BUILD  notebook.ipynb
examples/oci/: BUILD
examples/python/: BUILD  library.py  main.py  test.py
examples/rust/: BUILD
examples/rust/src/: foo.rs  lib.rs  main.rs
platform/: BUILD  platform.bzl
platform/config/: BUILD
platform/constraint/: constraint.bzl
registry/: README.md
registry/modules/hermetic_cc_toolchain/: metadata.json
registry/modules/hermetic_cc_toolchain/2.0.0/: MODULE.bazel  source.json
registry/modules/rules_rust/: metadata.json
registry/modules/rules_rust/0.24.1/: MODULE.bazel  source.json
registry/modules/rules_rust/0.27.0/: MODULE.bazel  source.json
toolchain/ipython/: BUILD  jupyter.bzl
toolchain/python/: BUILD  README.md  jupyter.bzl  python.py  requirements.in  requirements_lock.txt
toolchain/python/poetry/: BUILD  lock.bzl  poetry.bzl  pyproject.toml
toolchain/python/tools/: ipython.py  jupyter.py  python.py
tools/black/: BUILD  black.py
tools/buildifier/: BUILD  buildifier.py
tools/cpplint/: BUILD  cpplint.py
tools/ipython/: BUILD
tools/jupyter/: BUILD  jupyter.bzl
tools/mdformat/: BUILD  mdformat.py
tools/poetry/: BUILD  download.py  poetry.bzl  poetry.py
tools/pre-commit/: BUILD  README.md  config.yaml  pre-commit.py
tools/python/: BUILD
tools/rustfmt/: BUILD  rustfmt.py
