[tool.poetry]
name = "template"
version = "0.1"
description = "python dependencies"
authors = []


[tool.poetry.dependencies]
python = "~=3.9"
ipython = "^8.10.0"
wheel = "^0.42.0"
notebook = "^7.0.1"
importlib-metadata = "^6.8.0"
typing-extensions = "^4.8.0"

pre-commit = "=3.3.3"
black = "=23.7.0"
jupyter-black = "=0.3.4"
cpplint = "=1.6.1"
mdformat = "^0.7.17"

numpy = "=1.25.2"
